--- a/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
@@ -43,11 +43,19 @@
         -->
         <Grid RowDefinitions="200,*">
 
-            <Image Grid.Row="0"
-                   Source="title_header.png"
-                   SemanticProperties.Description="title header"
-                   HeightRequest="200"
-                   HorizontalOptions="Center" />
+            <VerticalStackLayout Grid.Row="0">
+
+                <Label HorizontalOptions="Center"
+                       Text="２Ｄ　ＲＰＧ　ネギラーメン"
+                       FontSize="48"/>
+
+                <Image HorizontalOptions="Center"
+                       Margin="0,10,0,0"
+                       HeightRequest="100"
+                        Source="title_header.png"
+                        SemanticProperties.Description="title header"/>
+
+            </VerticalStackLayout>
 
             <VerticalStackLayout Grid.Row="1"
                                  Spacing="25"
@@ -71,9 +79,9 @@
 
                 <!-- 「画面をレイアウトする」 -->
                 <Label HorizontalOptions="Center"
-                   Text="{app:Translate LayoutTheScreen}"
-                   SemanticProperties.HeadingLevel="Level1"
-                   FontSize="32"/>
+                       Text="{app:Translate LayoutTheScreen}"
+                       SemanticProperties.HeadingLevel="Level1"
+                       FontSize="32"/>
 
                 <Grid ColumnDefinitions="*,*" RowDefinitions="*,*">
 
