--- a/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
@@ -207,6 +207,15 @@
             <!--    ◆３段目　ラベル列
                     ==================
             -->
+            <!-- 「よこ」 -->
+            <Label Grid.Row="2" Grid.Column="1"
+                   HorizontalTextAlignment="End"
+                   Text="{app:Translate Width}"/>
+
+            <!-- 「たて」 -->
+            <Label Grid.Row="2" Grid.Column="2"
+                   HorizontalTextAlignment="End"
+                   Text="{app:Translate Height}"/>
 
             <!-- 「ズーム」 -->
             <Label Grid.Row="3" Grid.Column="9"
@@ -222,6 +231,20 @@
                    HorizontalTextAlignment="End"
                    VerticalTextAlignment="Center"
                    Text="{app:Translate Working}"/>
+            
+            <!-- 元画像の横幅。読取専用 -->
+            <Label Grid.Row="3" Grid.Column="1"
+                   HorizontalTextAlignment="End"
+                   VerticalTextAlignment="Center"
+                   FontSize="24"
+                   Text="{Binding WorkingImageWidthAsInt, Mode=OneWay}"/>
+
+            <!-- 元画像の縦幅。読取専用 -->
+            <Label Grid.Row="3" Grid.Column="2"
+                   HorizontalTextAlignment="End"
+                   VerticalTextAlignment="Center"
+                   FontSize="24"
+                   Text="{Binding WorkingImageHeightAsInt, Mode=OneWay}"/>
 
             <!-- ズーム -->
             <Entry Grid.Row="3" Grid.Column="10"
